# ViBD

./: .env  README.md  main.py  pyproject.toml
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  equipment.py  orders.py  reviews.py  shifts.py  users.py
app/core/: security.py
app/schemas/: chat.py  equipment.py  order.py  review.py  shift.py  user.py
migration/: env.py
migration/versions/: b479a1e3d057_create.py  cd7bf2735aec_create.py  e97e501b56d6_create2.py
models/: __init__.py  chat.py  chat_message.py  equipment.py  order.py  review.py  user.py  work_shift.py
settings/: config.py  database.py
